--- a/Prueba_con_server/views/index.ejs
+++ b/Prueba_con_server/views/index.ejs
@@ -1,109 +1,7 @@
 <%- include("templates/cabecera.ejs", {tituloPagina: "Pagina principal"}) %> 
-<body>
-    <div class="contenedor">
-        <form action="">
-            <div class="selectbox">
-                <div class="select" id="select">
-                    <div class="contenido-select">
-                        <h1 class="titulo">Seleccione la consulta</h1>
-                        <p class="descripcion">Conozca una introduccion a la consulta seleccionada.</p>
-                    </div>
-                    <i class="fas fa-angle-down"></i> <!--Flecha de seleccion-->
-                </div>
-
-                <!--Consulta 1-->
-                <div class="opciones" id="opciones">
-                    <a href="#" class="opcion">
-                        <div class="contenido-opcion">
-                            <div class="textos">
-                                <h1 class="titulo">1.	Obtener los 3 primeros empleados que han tenido las mayores ventas totales el año pasado.</h1>
-                                <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                        </div>
-                    </a>
-
-                <!--Consulta 2-->
-                <a href="#" class="opcion">
-                    <div class="contenido-opcion">
-                        <div class="textos">
-                            <h1 class="titulo">2.	El vendedor que vendió más por territorio.</h1>
-                            <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Consulta 3-->
-                <a href="#" class="opcion">
-                    <div class="contenido-opcion">
-                        <div class="textos">
-                            <h1 class="titulo">3.	Contar las órdenes de venta por tipo de envío.</h1>
-                            <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Consulta 4-->
-                <a href="#" class="opcion">
-                    <div class="contenido-opcion">
-                        <div class="textos">
-                            <h1 class="titulo">4.	Añadir un método de envió.</h1>
-                            <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Consulta 5-->
-                <a href="#" class="opcion">
-                    <div class="contenido-opcion">
-                        <div class="textos">
-                            <h1 class="titulo">5.	Listar a los clientes con respecto al método de envió que les llega la mercancía.</h1>
-                            <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Consulta 6-->
-                <a href="#" class="opcion">
-                    <div class="contenido-opcion">
-                        <div class="textos">
-                            <h1 class="titulo">6.	Obtener la cantidad de órdenes de venta por territorio.</h1>
-                            <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Consulta 7-->
-                <a href="#" class="opcion">
-                    <div class="contenido-opcion">
-                        <div class="textos">
-                            <h1 class="titulo">7.	Obtener los clientes que han comprado asociados a que están recibiendo publicidad por correo electrónico.</h1>
-                            <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Consulta 8-->
-                <a href="#" class="opcion">
-                    <div class="contenido-opcion">
-                        <div class="textos">
-                            <h1 class="titulo">8.	Obtener los tipos de razones de ventas de los clientes suscritos a publicidad por correo electrónico.</h1>
-                            <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Consulta 9-->
-                <a href="#" class="opcion">
-                    <div class="contenido-opcion">
-                        <div class="textos">
-                            <h1 class="titulo">9.	Obtener las razones de venta de los clientes no suscritos a publicidad por correo electrónico.</h1>
-                            <p class="descripcion">El resultado de esta consulta Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                </a>
-                </div>
-            </div>
-            <input type="hidden" name="consulta" id="inputSelected" value="">
-        </form>   
+    <div class = "caja">
+        <%- include("templates/selectbox.ejs") %>
     </div>
-    <%- include("templates/footer.ejs") %> 
+
+    <iframe class="frame-preview", id="frameConsultas", width="100%", src = ""></iframe>
+<%- include("templates/footer.ejs") %> 
