--- a/Prueba_con_server/views/templates/cabecera.ejs
+++ b/Prueba_con_server/views/templates/cabecera.ejs
@@ -7,5 +7,6 @@
         <title><%= tituloPagina %> </title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet"> 
 	    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
+    <body>
