NavBar Agregada, se puede descargar pdf

--- a/Prueba_con_server/views/templates/cabecera.ejs
+++ b/Prueba_con_server/views/templates/cabecera.ejs
@@ -10,3 +10,26 @@
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
+        <div class="barra-navegacion">
+            <nav class="barranav">
+                <ul class="barra-superior">
+                    <li class="item-barra-superior"><a href="/">TECHNOSOLUTIONS</a></li>
+                    <li class="item-barra-superior"><a href="/">INICIO</a></li>
+                    <li class="item-barra-superior"><a href="/sobre-nosotros"> SOBRE NOSOTROS</a></li>
+                    <li class="item-barra-superior"><a href="#">CONSULTAS</a>
+                        <!--Barra de las consultas-->
+                        <ul class="barra-inferior">
+                            <li class="item-barra-inferior"><a href="/consulta1">CONSULTA 1</a></li>
+                            <li class="item-barra-inferior"><a href="/consulta2">CONSULTA 2</a></li>
+                            <li class="item-barra-inferior"><a href="/consulta3">CONSULTA 3</a></li>
+                            <li class="item-barra-inferior"><a href="/consulta4">CONSULTA 4</a></li>
+                            <li class="item-barra-inferior"><a href="/consulta5">CONSULTA 5</a></li>
+                            <li class="item-barra-inferior"><a href="/consulta6">CONSULTA 6</a></li>
+                            <li class="item-barra-inferior"><a href="/consulta7">CONSULTA 7</a></li>
+                            <li class="item-barra-inferior"><a href="/consulta8">CONSULTA 8</a></li>
+                            <li class="item-barra-inferior"><a href="/consulta9">CONSULTA 9</a></li>
+                        </ul>
+                    </li>
+                    <li class="item-barra-superior"><a href="/downloads/Algebra.pdf" download>PROPUESTA DE SOLUCION</a></li>
+            </nav>
+        </div>
