--- a/Prueba_con_server/public/css/style.css
+++ b/Prueba_con_server/public/css/style.css
@@ -12,7 +12,63 @@ body {
 a {
     text-decoration: none;
 }
+/*Estilo para la barra de navegacion*/
+/*General*/
+.barra-navegacion {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    z-index: 500;
+}
+.barranav ul {
+    list-style: none;
+}
 
+.barranav li {
+    line-height: 3rem;
+    position: relative;
+}
+
+.barranav li ul {
+    position: absolute;
+}
+.barranav a {
+    color: #ddd;
+    display: block;
+    padding: 0 2.5em;
+    transition: 0.3s;
+}
+
+.barranav a:hover {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+/*Primer Nivel*/
+.barranav > .barra-superior {
+    background-color: #333;
+    display: flex;
+    width: 100%;
+}
+
+/*Segundo Nivel*/
+.barranav .item-barra-superior .item-barra-inferior {
+    background: #222;
+    max-height: 0;
+    overflow: hidden;
+    width: 180px;
+    transition: all .4s ease-in-out 0s;
+}
+
+.barranav > .barra-superior > .item-barra-superior > .barra-inferior {
+    top: 100%;
+}
+
+.barranav .item-barra-superior:hover .item-barra-inferior {
+    max-height: 500px;
+    overflow: visible;
+}
+/*Estilo de barra de opciones*/
+/*Posiblemente se quite*/
 .contenedor {
     width: 90%;
     max-width: 1000px;
@@ -38,8 +94,6 @@ a {
     transition: .2s esae all;
     margin-bottom: 30px;
     padding: 30px;
-    position: relative;
-    z-index: 200;
     border: 2px solid transparent;
 }
 
@@ -181,3 +235,4 @@ a {
 .cardc1:hover .imagen-c1-content {
     height: 150px;
 }
+
