--- a/Prueba_con_server/views/templates/cabecera.ejs
+++ b/Prueba_con_server/views/templates/cabecera.ejs
@@ -13,7 +13,7 @@
         <div class="barra-navegacion">
             <nav class="barranav">
                 <ul class="barra-superior">
-                    <li class="item-barra-superior"><a href="/">TECHNOSOLUTIONS</a></li>
+                    <li class="item-barra-superior"><a href="/">ADVENTURE WORKS</a></li>
                     <li class="item-barra-superior"><a href="/">INICIO</a></li>
                     <li class="item-barra-superior"><a href="/sobre-nosotros"> SOBRE NOSOTROS</a></li>
                     <li class="item-barra-superior"><a href="#">CONSULTAS</a>
