--- a/Prueba_con_server/public/css/style.css
+++ b/Prueba_con_server/public/css/style.css
@@ -244,6 +244,17 @@ a {
     justify-content: center;
     width: 100%;
 }
+
+.error{
+    margin-left: 900px;
+    justify-content: center;
+    align-items: center;
+    max-width: 790px;
+    max-height: 500px;
+    display: flex;
+
+}
+
 table {
     border-collapse: collapse;
     box-shadow: 0 5px 10px #E1E5EE;
