--- a/Prueba_con_server/views/404.ejs
+++ b/Prueba_con_server/views/404.ejs
@@ -1,6 +1,6 @@
 <%- include("templates/cabecera.ejs", {tituloPagina: "Error 404"}) %> 
-<body>
-    <h1><%= titulo %> </h1>
+<body class="error">
+    <img src="404.png">
     <h2><%= descripcion %> </h2>
 </body>
 </html>
