--- a/Prueba_con_server/views/404.ejs
+++ b/Prueba_con_server/views/404.ejs
@@ -1,6 +1,6 @@
 <%- include("templates/cabecera.ejs", {tituloPagina: "Error 404"}) %> 
 <body class="error">
     <img src="/images/404.png">
-    <h2><%= descripcion %> </h2>
+    <h2 class="ter"><%= descripcion %> </h2>
 </body>
 </html>
