--- a/Prueba_con_server/public/css/style.css
+++ b/Prueba_con_server/public/css/style.css
@@ -278,3 +278,51 @@ th {
 td {
     padding: 1rem 2rem;
 }
+
+.ter{
+	    margin-left: 50px:
+	    color: red; 
+	}
+	
+
+	.fondo{
+	    width: 100%;
+	    background:#ceffd6;
+	    position: relative;
+	    height: 338px;
+	    display: flex;
+	}
+	
+
+	.fondo::after{
+	    content: "";
+	    position: absolute;
+	    width: 100%;
+	    height: 100%;
+	    padding-top: 1px;
+	    background: #b7f1a7;
+	    transform-origin: top right;
+	    transform: skewY(-15deg);
+	    display: inline-block;
+	}
+	
+
+	.tmai{
+	    position: absolute;
+	     max-width: 700px;
+	    height: auto;
+	    font-family: candara;
+	    z-index: 2;
+	    top: 200;
+	    font-size: 30;
+	}
+	
+
+	.imai{
+	    position: absolute;
+	    max-height: 610px;
+	    max-width: 400px;
+	    right: 0;
+	    top: 0;
+	}
+
