--- a/Prueba_con_server/views/Vmain.ejs
+++ b/Prueba_con_server/views/Vmain.ejs
@@ -1,8 +1,4 @@
 <%- include("templates/cabecera.ejs", {tituloPagina: "Ventana principal"}) %> 
-<head>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
     <section class="fondo">
         
     </section>
@@ -12,5 +8,4 @@
             <h1>¡Bienvenido! Seleccione en la barra de navegación la información que desee consultar.</h1>
         </div>
     </section>
-</body>
-</html>
+<%- include("templates/footer.ejs") %> 
