--- a/Prueba_con_server/views/404.ejs
+++ b/Prueba_con_server/views/404.ejs
@@ -1,6 +1,8 @@
 <%- include("templates/cabecera.ejs", {tituloPagina: "Error 404"}) %> 
-<body class="error">
-    <img src="/images/404.png">
-    <h2 class="ter"><%= descripcion %> </h2>
-</body>
+<div class="error">
+    <img class="error-imagen" src="/images/404.png">
+</div>
+<div class ="error">
+    <h2>No existe la pagina solicitada</h2>
+</div>
 </html>
