--- a/Prueba_con_server/public/css/style.css
+++ b/Prueba_con_server/public/css/style.css
@@ -68,116 +68,6 @@ a {
     max-height: 500px;
     overflow: visible;
 }
-/*Estilo de barra de opciones*/
-/*Posiblemente se quite*/
-.contenedor {
-    width: 90%;
-    max-width: 1000px;
-    margin: auto;
-    padding: 40px 0;
-}
-
-.selectbox {
-    width: 50%;
-    margin: auto;
-    position: relative;
-}
-
-.select {
-    background: #ffffff;
-    width: 100%;
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, .16);
-    border-radius: 10px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: .2s esae all;
-    margin-bottom: 30px;
-    padding: 30px;
-    border: 2px solid transparent;
-}
-
-.select.active, .select:hover {
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, .16);
-    border: 2px solid #213f8f;
-}
-
-.select.active::before {
-    content: "";
-    display: block;
-    height: 0;
-    width: 0;
-    border-top: 15px solid #213f8f;
-    border-right: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    border-left: 15px solid transparent;
-    position: absolute;
-    bottom: -30px;
-    left: calc(50% - 15px);
-}
-
-.select i {
-    font-size: 30px;
-    margin-left: 30px;
-    color: #213f8f;
-}
-
-.titulo {
-    margin-bottom: 10px;
-    color: #000000;
-    font-weight: 600;
-    font-size: 24px;
-}
-
-.descripcion {
-    font-size: 18px;
-    color: #434343;
-}
-
-.opciones {
-    background: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, .16);
-    width: 100%;
-    max-height: 400px;
-    overflow: auto;
-    z-index: 100;
-    display: none;
-}
-
-.opciones.active {
-    display: block;
-    animation: fadeIn .3s forwards;
-}
-
-@keyframes fadeIn {
-    from {
-        transform: translateY(-200px) scale(.5);
-    } to {
-        transform: translateY(0) scale(1);
-    } 
-}
-
-.contenido-opcion {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    transition: .2s ease all;
-}
-
-.opciones .contenido-opcion {
-    padding: 30px;
-}
-
-.opciones .contenido-opcion:hover {
-    background: #213f8f;
-}
-
-.opciones .contenido-opcion:hover .titulo, 
-.opciones .contenido-opcion:hover .descripcion {
-    color:#ffffff;
-}
 
 /*Para realizar el diseño responsivo*/
 @media screen and (max-width: 800px) {
@@ -186,6 +76,30 @@ a {
     }
 }
 
+/*Diseño para la pagina de inicio*/
+.inicio {
+    height: 100vh;
+    background-image: linear-gradient(to top, rgba(251, 194, 235, 0.486) 0%, hsla(218, 68%, 79%, 0.514) 100%), url('/images/bc3.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.titulo-div {
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.titulo {
+    font-size: 60px;
+    margin-bottom: 15px;
+    
+}
 /*Diseño para imagenes de consulta 1*/
 .con1 {
     background: #f4f4f7;
@@ -246,15 +160,14 @@ a {
 }
 
 .error{
-    margin-left: 900px;
     justify-content: center;
     align-items: center;
-    max-width: 790px;
-    max-height: 500px;
     display: flex;
-
 }
 
+.error-imagen {
+    margin-top: 50px;
+}
 table {
     border-collapse: collapse;
     box-shadow: 0 5px 10px #E1E5EE;
