--- a/Prueba_con_server/public/css/style.css
+++ b/Prueba_con_server/public/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: #f4f4f7;
+    background-image: repeating-linear-gradient(to bottom right, #b0b1df, #b1b2b6);
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -195,28 +195,6 @@ td {
 .ter{
     margin-left: 50px:
     color: red; 
-}
-
-
-.fondo{
-    width: 100%;
-    background:#ceffd6;
-    position: relative;
-    height: 330px;
-    display: flex;
-}
-
-
-.fondo::after{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding-top: 1px;
-    background: #b7f1a7;
-    transform-origin: top right;
-    transform: skewY(-15deg);
-    display: inline-block;
 }
 
 
