--- a/Prueba_con_server/public/css/style.css
+++ b/Prueba_con_server/public/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: repeating-linear-gradient(to bottom right, #b0b1df, #b1b2b6);
+    background-image: linear-gradient(to bottom right, #b0b1df, #b1b2b6);
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -217,3 +217,10 @@ td {
     top: 0;
 }
 
+.fondo{
+    width: 100%;
+     linear-gradient(to bottom right, #b0b1df, #b1b2b6)
+    position: relative;
+    height: 330px;
+    display: flex;
+}
