--- a/Prueba_con_server/views/Vmain.ejs
+++ b/Prueba_con_server/views/Vmain.ejs
@@ -1,5 +1,6 @@
 <%- include("templates/cabecera.ejs", {tituloPagina: "Ventana principal"}) %> 
-    <img src="/images/bc1.png" class="imai">
+   <section class="fondo"></section>
+   <img src="/images/bc1.png" class="imai">
     <section>
         <div class="tmai">
             <h1>¡Bienvenido! Seleccione en la barra de navegación la información que desee consultar.</h1>
