--- a/Prueba_con_server/views/c1design.ejs
+++ b/Prueba_con_server/views/c1design.ejs
@@ -1,4 +1,5 @@
 <%- include("templates/cabecera.ejs", {tituloPagina: "Consulta 1"}) %>
+<section class="fondo"></section>
 <div class="con1">
     <div class="cardc1">
         <img src="/images/empleado1.jpg" alt="" />
