--- a/Prueba_con_server/public/css/style.css
+++ b/Prueba_con_server/public/css/style.css
@@ -1,4 +1,5 @@
 * {
+    background-image: linear-gradient(to bottom right, #b0b1df, #b1b2b6);
     padding: 0;
     margin: 0;
     box-sizing: border-box;
