--- a/Prueba_con_server/public/css/style.css
+++ b/Prueba_con_server/public/css/style.css
@@ -212,7 +212,8 @@ td {
 
 .imai{
     position: absolute;
-    max-height: 400px;
+    margin-top:50px;
+    height: 600px;
     max-width: 400px;
     right: 0;
     top: 0;
