--- a/Prueba_con_server/views/Vmain.ejs
+++ b/Prueba_con_server/views/Vmain.ejs
@@ -1,8 +1,5 @@
 <%- include("templates/cabecera.ejs", {tituloPagina: "Ventana principal"}) %> 
-   <img src="/images/bc1.png" class="imai">
-    <section>
-        <div class="tmai">
-            <h1>¡Bienvenido! Seleccione en la barra de navegación la información que desee consultar.</h1>
-        </div>
-    </section>
+<div class="inicio">
+    <h1 class="titulo">ADVENTURE WORKS Viviendo la vida rodada a rodada.</h1>
+</div> 
 <%- include("templates/footer.ejs") %> 
