--- a/Prueba_con_server/views/lector.ejs
+++ b/Prueba_con_server/views/lector.ejs
@@ -1,11 +1,5 @@
-<%- include("templates/cabecera.ejs", {tituloPagina: "Ventana principal"}) %> 
-    <section class="fondo">
-        
-    </section>
-    <img src="/images/bc.jpg" class="imai">
-    <section>
-        <div class="tmai">
-            <h1>¡Bienvenido! Seleccione en la barra de navegación la información que desee consultar.</h1>
-        </div>
+<%- include("templates/cabecera.ejs", {tituloPagina: "Documento proyecto final"}) %> 
+    <section class="lector-pdf">
+        <embed src="/downloads/Algebra.pdf" width="800" height="570" type="application/pdf">
     </section>
 <%- include("templates/footer.ejs") %> 
