--- a/Prueba_con_server/views/templates/cabecera.ejs
+++ b/Prueba_con_server/views/templates/cabecera.ejs
@@ -30,6 +30,6 @@
                             <li class="item-barra-inferior"><a href="/consulta9">CONSULTA 9</a></li>
                         </ul>
                     </li>
-                    <li class="item-barra-superior"><a href="/propuesta" download>PROPUESTA DE SOLUCION</a></li>
+                    <li class="item-barra-superior"><a href="/propuesta">PROPUESTA DE SOLUCION</a></li>
             </nav>
         </div>
