--- a/Prueba_con_server/views/c1design.ejs
+++ b/Prueba_con_server/views/c1design.ejs
@@ -1,5 +1,4 @@
-<%- include("templates/cabecera.ejs", {tituloPagina: "Consulta 1"}) %>
-<section class="fondo"></section>
+<%- include("templates/cabecera.ejs", {tituloPagina: "Sobre nosotros"}) %>
 <div class="con1">
     <div class="cardc1">
         <img src="/images/empleado1.jpg" alt="" />
@@ -31,20 +30,5 @@
         </div>
     </div>
 
-    <div class="cardc1">
-        <img src="/images/empleado3.jpg" alt="" />
-        <div class="imagen-c1-content">
-        <h2>
-            <%= vendedores.recordset[2].FirstName + " " +
-            vendedores.recordset[2].MiddleName + " " +
-            vendedores.recordset[2].LastName%>
-        </h2>
-        <p>
-            Por ultimo pero no menos importante nuestro tercer mejor vendedor con
-            ventas totales de $<%= vendedores.recordset[2].SalesLastYear %> el año
-            pasado.
-        </p>
-        </div>
-    </div>
 </div>
 <%- include("templates/footer.ejs") %>
