--- a/Prueba_con_server/public/css/style.css
+++ b/Prueba_con_server/public/css/style.css
@@ -132,6 +132,7 @@ a {
     position: absolute;
     min-height: 100%;
     width: 100%;
+    height: 60px;
     border-radius: 10px;
 }
 
@@ -202,7 +203,7 @@ td {
 }
 
 .ter{
-    margin-left: 50px:
+    margin-left: 50px;
     color: red; 
 }
 
