Cambio en el documentacion

--- a/Prueba_con_server/views/lector.ejs
+++ b/Prueba_con_server/views/lector.ejs
@@ -1,5 +1,5 @@
 <%- include("templates/cabecera.ejs", {tituloPagina: "Documento proyecto final"}) %> 
     <section class="lector-pdf">
-        <embed src="/downloads/Algebra.pdf" width="800" height="570" type="application/pdf">
+        <embed src="/downloads/Propuesta_Documento.pdf" width="800" height="570" type="application/pdf">
     </section>
 <%- include("templates/footer.ejs") %> 
