Cambios en el index y creacion de las pruebas API

--- a/Prueba_con_server/views/Vmain.ejs
+++ b/Prueba_con_server/views/Vmain.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/cabecera.ejs", {tituloPagina: "Ventana principal"}) %> 
+<%- include("templates/cabecera.ejs", {tituloPagina: "Inicio"}) %> 
 <div class="inicio">
     <h1 class="titulo">ADVENTURE WORKS Viviendo la vida rodada a rodada.</h1>
 </div> 
